--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,12 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 
     background: rgb(34,94,195);
     background: linear-gradient(0deg, rgba(34,94,195,1) 0%, rgba(253,45,119,1) 100%);
   }
+  .del__btn:active{
+    opacity: 0.5;
+  }
+  .btn:active{
+    opacity: 0.7;
+  }
   .input__up-title{
     font-size: 20px;
     font-weight: 500;
